--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass-dev": "sass --watch --update --style=expanded assets/scss:assets/css",
-    "sass-prod": "sass --no-source-map --style=compressed assets/scss:assets/css",
+    "sass-dev": "sass --watch --update --style=expanded assets/scss:assets/css",  
+    "build-prod": "sass --no-source-map --style=compressed assets/scss:assets/css && babel main.js -d dist --presets es2015",
     "build": "babel main.js -d dist --presets es2015",
     "watch": "babel main.js -d dist --presets es2015 -w"
   },
