--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "sass-dev": "sass --watch --update --style=expanded assets/scss:assets/css",
     "build-prod": "sass --no-source-map --style=compressed assets/scss:assets/css && babel main.js -d dist --presets es2015",
     "webpack": "webpack",
-    "webpack-watch": "webpack --watch",
-    "second-sass-dev": "sass --watch --update --style=expanded second-assets/scss:second-assets/css"
+    "webpack-watch": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
